<resources>
    <string name="app_name">FrikiFilm</string>

    //Strings login
    <string name="hint_email">E-mail</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_imagen">Imagen</string>
    <string name="hint_acceder">ACCEDER</string>
    <string name="hint_o_login">o</string>
    <string name="hint_registrarse"><u>Registrarse</u></string>

    //Strings registro
    <string name="hint_usuario">Nombre de Usuario</string>
    <string name="hint_telefono">Teléfono de Contacto</string>
    <string name="hint_contrasena_registro">Nueva contraseña</string>
    <string name="hint_confirm_contrasena_registro">Confirme contraseña</string>
    <string name="hint_registrarme">Registrarme</string>

    //Strings item_pelicula
    <string name="hint_añadir">Añadir</string>

    //Strings editar
    <string name="hint_titulo">Título</string>
    <string name="hint_director">Director</string>
    <string name="hint_genero">Género</string>
    <string name="hint_nota">Nota</string>
    <string name="hint_ano">Año del estreno</string>
    <string name="hint_duracion">Duración (Ejemplo: 100\')</string>
    <string name="hint_musica">Dirección Musical</string>
    <string name="hint_fotografia">Dirección de Fotografía</string>
    <string name="hint_pais">País</string>
    <string name="hint_sinopsis">Sinopsis</string>
    <string name="hint_url">Url de la carátula deseada</string>

    //Strings menus
    <string name="hint_editar">Editar</string>
    <string name="hint_guardar">Guardar</string>
    <string name="hint_eliminar">Eliminar</string>
    <string name="hint_llamar">Llamar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>