<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_app"
    android:background="@color/fondo_azul"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdvertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdhorizontal25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdhorizontal50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdhorizontal75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/hint_imagen"
            app:layout_constraintBottom_toTopOf="@+id/gdhorizontal25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_app"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:layout_marginTop="@dimen/margen_top_til"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gdhorizontal25"

            app:startIconDrawable="@android:drawable/ic_dialog_email"
            app:startIconTint="@color/primaryLightColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginPsw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til_login"
            android:layout_marginEnd="@dimen/margen_derecho_til"

            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primaryLightColor"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:startIconDrawable="@android:drawable/ic_lock_lock"
            app:startIconTint="@color/primaryLightColor"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilLoginEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contraseña"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btLoginAcceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_top_btLoginRegistro"
            android:text="@string/hint_acceder"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilLoginPsw" />

        <TextView
            android:id="@+id/tvLoginO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_top_default"
            android:text="@string/hint_o_login"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLoginAcceder" />

        <TextView
            android:id="@+id/tvLoginRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_top_default"
            android:text="@string/hint_registrarse"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginO" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>