<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_azul"
    android:padding="@dimen/padding_app"
    tools:context=".activities.EditarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_titulo"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDirector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_director"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilDirector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_genero"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilGenero">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nota"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNota">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ano"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDuracion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAno">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedDuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_duracion"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMusica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilDuracion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedMusica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_musica"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilMusica">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fotografia"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPais"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilFoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pais"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPais">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sinopsis"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilImagen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margen_izquierdo_til"
            android:layout_marginTop="@dimen/margen_top_til"
            android:layout_marginEnd="@dimen/margen_derecho_til"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_url"
                android:inputType="textUri"/>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>